--- a/Resources/public/paella/player/index.html
+++ b/Resources/public/paella/player/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8;">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 		<title>Paella Engage Example</title>
 		<script type="text/javascript" src="javascript/swfobject.js"></script>
 		<script type="text/javascript" src="javascript/traceur-compiler.js"></script>
