--- a/Resources/public/paella/player/index.html
+++ b/Resources/public/paella/player/index.html
@@ -6,15 +6,13 @@
 		<meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 		<title>Paella Engage Example</title>
 		<script type="text/javascript" src="javascript/swfobject.js"></script>
-		<script type="text/javascript" src="javascript/traceur-compiler.js"></script>
 		<script type="text/javascript" src="javascript/base.js"></script>
 		<script type="text/javascript" src="javascript/jquery.js"></script>
 		<script type="text/javascript" src="javascript/lunr.min.js"></script>
 		<script type="text/javascript" src="javascript/require.js"></script>
+		<script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
 		<script type="text/javascript" src="javascript/paella_player.js"></script>
-
 		<link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
-		<link rel="stylesheet" href="resources/style/style_dark.css" id="paellaSkin" type="text/css" media="screen" title="no title" charset="utf-8">
 
 		<script>
 
