--- a/Resources/public/paella/player/index-custom.html
+++ b/Resources/public/paella/player/index-custom.html
@@ -5,9 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 		<title>Paella Engage Example</title>
-		<script type="text/javascript" src="javascript/polyfill.min.js"></script>
-		<script type="text/javascript" src="javascript/jquery.min.js"></script>
+		<script type="text/javascript" src="javascript/traceur-runtime.min.js"></script>
+		<script type="text/javascript" src="javascript/swfobject.js"></script>
+		<script type="text/javascript" src="javascript/base.js"></script>
+		<script type="text/javascript" src="javascript/jquery.js"></script>
 		<script type="text/javascript" src="javascript/lunr.min.js"></script>
+		<script type="text/javascript" src="javascript/require.js"></script>
 		<script type="text/javascript" src="javascript/paella_player.js"></script>
 
 		<link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
@@ -22,7 +25,7 @@
                     // previous parameter is null or undefined
                     loadConfig: function(defaultConfigUrl) {
                         return new Promise((resolve) => {
-                            paella.utils.ajax.get({ url:defaultConfigUrl }, (data,type,returnCode) => {
+                            base.ajax.get({ url:defaultConfigUrl }, (data,type,returnCode) => {
                                 resolve(data);
                             })
                         });
@@ -44,7 +47,7 @@
                     loadVideo: function() {
                         return new Promise((resolve) => {
                             let url = paella.player.dataUrl;
-                            paella.utils.ajax.get({ url:url },
+                            base.ajax.get({ url:url },
                                 function(data,type,err) {
                                     if (typeof(data)=="string") {
                                         try {
