--- a/Resources/public/paella/player/index-debug.html
+++ b/Resources/public/paella/player/index-debug.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8;">
         <title>Paella Engage Example</title>
-        <script type="text/javascript" src="javascript/polyfill.min.js"></script>
-        <script type="text/javascript" src="build/player/javascript/jquery.min.js"></script>
+        <script type="text/javascript" src="build/player/javascript/traceur-runtime.min.js"></script>
+        <script type="text/javascript" src="build/player/javascript/jquery.js"></script>
         <script>
             try {
                 $ = jQuery = module.exports;
             } catch(e) {}
         </script>
+		<script type="text/javascript" src="build/player/javascript/base.js"></script>
 		<script type="text/javascript" src="build/player/javascript/lunr.min.js"></script>
         <script type="text/javascript" src="build/player/javascript/require.js"></script>
         
