--- a/Resources/public/paella/src/index.html
+++ b/Resources/public/paella/src/index.html
@@ -4,20 +4,22 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Paella Player 7</title>
-	<script src="paella-player.js"></script>
+	<title>Document</title>
 	<style>
+		body {
+			margin: 0px;
+		}
+
 		#player-container {
-			width: 90vw;
-			height: 90vh;
-			left: 5vw;
-			top: 5vh;
+			width: 100vw;
+			height: 100vh;
+			left: 0px;
+			top: 0px;
 			position: relative;
-			font-family: helvetica, arial, sans-serif;
 		}
 	</style>
 </head>
 <body>
-	<div id="player-container"></div>
+<div id="player-container"></div>
 </body>
 </html>
